Bug 3436 - [PATCH] Conndis.c uses incorrect type for args to XdmcpWrap()
Summary: [PATCH] Conndis.c uses incorrect type for args to XdmcpWrap()
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/Xlib (show other bugs)
Version: 6.8.99.8
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-05-30 06:54 UTC by Mike A. Harris
Modified: 2005-06-03 21:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Use correct type of "unsigned char" for args passed to XdmcpWrap() (663 bytes, patch)
2005-05-30 09:23 UTC, Mike A. Harris
no flags Details | Splinter Review

Description Mike A. Harris 2005-05-30 06:54:33 UTC
gcc -c -ansi -pedantic -Wall -Wpointer-arith -Wstrict-prototypes 			 
-Wmissing-prototypes -Wmissing-declarations 			  -Wredundant-decls
-Wnested-externs -Wundef    -I../.. -I../../exports/include   -Dlinux
-D__amd64__ -D_POSIX_C_SOURCE=199309L 				-D_POSIX_SOURCE -D_XOPEN_SOURCE 			
-D_BSD_SOURCE -D_SVID_SOURCE                                 -D_LARGEFILE_SOURCE
-D_FILE_OFFSET_BITS=64 				 -D_GNU_SOURCE 				  -DFUNCPROTO=15 -DNARROWPROTO
-DXTHREADS  -D_REENTRANT -DXUSE_MTSAFE_API    -DMALLOC_0_RETURNS_NULL 
-DHAS_SNPRINTF -DLIBX11			-DPOSTLOCALELIBDIR=\"lib64\"  	-O2
-fno-strength-reduce -fno-strict-aliasing  -DHASXDMAUTH -DSECURE_RPC -DUNIXCONN
-DTCPCONN -DHAS_STICKY_DIR_BIT -DHAS_FCHOWN -DIPv6   -DX11_t -DTRANS_CLIENT   
ConnDis.c -o unshared/ConnDis.o
ConnDis.c:716: warning: function declaration isn't a prototype
ConnDis.c: In function 'GetAuthorization':
ConnDis.c:1177: warning: pointer targets in passing argument 1 of 'XdmcpWrap'
differ in signedness
ConnDis.c:1177: warning: pointer targets in passing argument 2 of 'XdmcpWrap'
differ in signedness
ConnDis.c:1177: warning: pointer targets in passing argument 3 of 'XdmcpWrap'
differ in signedness
rm -f ConnDis.o
gcc -c -O2 -fno-strength-reduce -fno-strict-aliasing  -ansi -pedantic -Wall
-Wpointer-arith -Wstrict-prototypes 			  -Wmissing-prototypes
-Wmissing-declarations 			  -Wredundant-decls -Wnested-externs -Wundef   
-I../.. -I../../exports/include   -Dlinux -D__amd64__
-D_POSIX_C_SOURCE=199309L 				-D_POSIX_SOURCE -D_XOPEN_SOURCE 				-D_BSD_SOURCE
-D_SVID_SOURCE                                 -D_LARGEFILE_SOURCE
-D_FILE_OFFSET_BITS=64 				 -D_GNU_SOURCE 				  -DFUNCPROTO=15 -DNARROWPROTO
-DXTHREADS  -D_REENTRANT -DXUSE_MTSAFE_API    -DMALLOC_0_RETURNS_NULL 
-DHAS_SNPRINTF -DLIBX11			-DPOSTLOCALELIBDIR=\"lib64\"  -DHASXDMAUTH
-DSECURE_RPC -DUNIXCONN -DTCPCONN -DHAS_STICKY_DIR_BIT -DHAS_FCHOWN -DIPv6  
-DX11_t -DTRANS_CLIENT      -fPIC ConnDis.c
ConnDis.c:716: warning: function declaration isn't a prototype
ConnDis.c: In function 'GetAuthorization':
ConnDis.c:1177: warning: pointer targets in passing argument 1 of 'XdmcpWrap'
differ in signedness
ConnDis.c:1177: warning: pointer targets in passing argument 2 of 'XdmcpWrap'
differ in signedness
ConnDis.c:1177: warning: pointer targets in passing argument 3 of 'XdmcpWrap'
differ in signedness
Comment 1 Mike A. Harris 2005-05-30 09:23:24 UTC
Created attachment 2799 [details] [review]
Use correct type of "unsigned char" for args passed to XdmcpWrap()
Comment 2 Alan Coopersmith 2005-06-04 14:22:06 UTC
The patch as submitted caused a few more warnings about assigning pointers of
differing types.   Adding a few casts cleared those.

Committed to CVS head:
CVSROOT:	/cvs/xorg
Module name:	xc
Changes by:	alanc@gabe.freedesktop.org	05/06/04 14:20:20

Log message:
  2005-06-04  Alan Coopersmith  <alan.coopersmith@sun.com>
  	* lib/X11/ConnDis.c (GetAuthorization):
  	Bug #3436 <https://bugs.freedesktop.org/show_bug.cgi?id=3436>
  	Conndis.c uses incorrect type for args to XdmcpWrap()
  	(Mike Harris - mharris@www.linux.org.uk)

Modified files:
      ./:
        ChangeLog 
      xc/lib/X11/:
        ConnDis.c 
  
  Revision      Changes    Path
  1.975         +6 -1      xc/ChangeLog
  1.8           +5 -5      xc/lib/X11/ConnDis.c


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.